--- a/projets.html
+++ b/projets.html
@@ -90,7 +90,7 @@
             <a href="https://github.com/Nicolas-Tran-SIO/KotlinAventure-project" target="_blank" class="github-btn"><i class="fab fa-github"></i> - Kotlin Aventure</a>
           </div>
             <div class="project-image">
-              <img src="/img/kotlin-aventure.jpg" alt="Projet Kotlin Aventure">
+              <img src="img/kotlin-aventure.jpg" alt="Projet Kotlin Aventure">
             </div>
         </div>
       </article>
@@ -116,7 +116,7 @@
             <a href="https://github.com/Dylan-Maudet/Geoworld/tree/main" target="_blank" class="github-btn"><i class="fab fa-github"></i> - Geoworld</a>
           </div>  
             <div class="project-image">
-              <img src="/img/geoworld.png" alt="Projet Geoworld">
+              <img src="img/geoworld.png" alt="Projet Geoworld">
             </div>
           </div>
         </article>
@@ -141,7 +141,7 @@
           <a href="https://github.com/Dylan-Maudet/sushi-app" target="_blank" class="github-btn"><i class="fab fa-github"></i> - Sushi-app</a>
         </div>
           <div class="project-image">
-            <img src="/img/sushi-app.png" alt="Projet Sushi-app">
+            <img src="img/sushi-app.png" alt="Projet Sushi-app">
           </div>
         </div>
       </article>
