--- a/stages.html
+++ b/stages.html
@@ -91,7 +91,7 @@
           </a>
           </div>
           <div class="project-image">
-            <img src="/img/logo-omac.jpeg" alt="Logo site Omac">
+            <img src="img/logo-omac.jpeg" alt="Logo site Omac">
           </div>
         </div>
       </article>
@@ -120,7 +120,7 @@
         </div>
 
         <div class="project-image">
-          <img src="/img/logo-cips.png" alt="Logo CIPS">
+          <img src="img/logo-cips.png" alt="Logo CIPS">
         </div>
       </div>
     </article>
