--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
           <div class="contact-infos">
             <h3>Mes coordonnées</h3>
             <ul>
-              <li><i class="fas fa-envelope"></i> dylan.maudet@gmail.com</li>
+              <li><i class="fas fa-envelope"></i> maudet.dylan@gmail.com</li>
               <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/dylan-maudet" target="_blank">LinkedIn</a></li>
               <li><i class="fab fa-github"></i> <a href="https://github.com/Dylan-Maudet" target="_blank">GitHub</a></li>
             </ul>
