--- a/index.html
+++ b/index.html
@@ -55,13 +55,11 @@
     <p>Je suis Dylan Maudet, diplômé d'un BTS Services Informatiques aux Organisations (SIO), option SLAM (Solutions Logicielles et Applications Métiers).</p>
     <p>Ce portfolio a pour objectif de présenter mon parcours, mes projets réalisés en formation et en autonomie, ainsi que mes premières expériences professionnelles dans le domaine du développement.</p>
     <p>Vous y trouverez une présentation de mes compétences, de mes réalisations, ainsi que des outils et technologies que j’ai appris à maîtriser au cours de ma formation.</p>
-    <p>🎓 Prochaine étape :</p>
-    <p>À la rentrée, j’intègrerai le BUT Métiers du Multimédia et de l’Internet (MMI) pour approfondir mes connaissances et compétences dans le numérique.</p>
 
     <div style="margin: 100px 0; text-align: center;">
-    <p>Envie d’en savoir plus sur mon cheminement ?</p>
+    <p>Envie d’en savoir plus à propos de moi et sur mon cheminement ?</p>
     <a href="#parcours" style="padding:12px 25px; background-color:#00bcd4; color:#fff; border-radius:8px; text-decoration:none; font-size:16px; font-weight:600;">
-    ▼ Mon parcours ▼
+    ▼ À propos ▼
     </a>
     </div>
 
@@ -69,10 +67,27 @@
     <p>Après avoir obtenu mon BTS Services Informatiques aux Organisations, option SLAM, j’ai pu acquérir une base de compétences en développement web, applications et en gestion de bases de données grâce à des projets concrets et des expériences en entreprise.</p>
     <p>Durant ma formation, j’ai travaillé sur plusieurs projets significatifs, comme "Kotlin Aventure", "Geoworld" et "Sushi-app", qui m’ont permis de mettre en pratique des langages tels que HTML/CSS, PHP, JavaScript et TypeScript mais aussi des technologies comme Angular et Springboot.</p>
     <p>J’ai également effectué deux stages, le premier uprès d'un centre d'initiation à la pratique sportive et le deuxième chez l'OMAC (office municipal d'animation de la cité), où j’ai pu approfondir mes connaissances du travail en équipe, de la gestion de versions, et des méthodologies de développement.</p>
-    <p>Pour poursuivre ma montée en compétences et élargir mes savoir-faire, j’intègrerai à la rentrée le BUT Métiers du Multimédia et de l’Internet (MMI), une formation pluridisciplinaire qui complétera parfaitement mon profil.</p>
+    <p>Dans la continuité de ma montée en compétences, j’ai intégré le BUT Métiers du Multimédia et de l’Internet (MMI), une formation pluridisciplinaire idéale pour enrichir mon profil.</p>
 
     <p>N’hésitez pas à parcourir les différentes pages pour découvrir en détail mes projets, mes expériences de stage, ainsi que mes compétences techniques.</p>
     <p>Merci pour votre visite et bonne navigation !</p>
+
+    <div style="text-align: center; margin-top: 40px;">
+      <a href="../Portfolio-main/fichiers/Dylan Maudet CV (portfolio).pdf"
+     download 
+     style="padding:14px 28px; background-color:#00bcd4; color:white; border-radius:10px; 
+            text-decoration:none; font-size:17px; font-weight:600; 
+            transition:0.3s ease;">
+    📄 Télécharger mon CV
+      </a>
+    </div>
+
+    <style>
+      a[href$="CV_Dylan_Maudet.pdf"]:hover {
+        background-color: #0097a7;
+      }
+    </style>
+
     </div>
   </main>
 </div>
