--- a/competences.html
+++ b/competences.html
@@ -54,38 +54,58 @@
       <section class="competences-section" style="padding-top: 5px;">
         <h2>Compétences techniques</h2>
 
-        <h3>Développement web & logiciel</h3>
-          <ul class="competence-list">
-            <li><i class="fab fa-html5"></i> HTML</li>
-            <li><i class="fab fa-css3-alt"></i> CSS</li>
-            <li><i class="fab fa-js"></i> JavaScript</li>
-            <li><i class="fab fa-php"></i> PHP</li>
-            <li><i class="fab fa-java"></i> Java</li>
-            <li><i class="fab fa-python"></i> Python</li>
-            <li><i class="fas fa-database"></i> SQL</li>
-            <li><i class="fas fa-file-code"></i> VBA</li>
-            <li><i class="fab fa-android"></i> Kotlin</li>
-            <li><i class="fab fa-js"></i> TypeScript</li>
-          </ul>
+        <!-- Langages de programmation -->
+        <h3>Langages de programmation</h3>
+        <ul class="competence-list">
+            <li><strong>Frontend :</strong> HTML, CSS, JavaScript, TypeScript</li>
+            <li><strong>Backend :</strong> PHP, Java, Python</li>
+            <li><strong>Autres langages :</strong> VBA, Kotlin</li>
+        </ul>
 
-        <h3>Frameworks & outils</h3>
-          <ul class="competence-list">
-            <li><i class="fab fa-wordpress"></i> WordPress</li>
+        <!-- Bases de données -->
+        <h3>Bases de données</h3>
+        <ul class="competence-list">
+            <li>SQL</li>
+            <li>MySQL</li>
+            <li>phpMyAdmin</li>
+        </ul>
+
+        <!-- Frameworks & Bibliothèques -->
+        <h3>Frameworks & Bibliothèques</h3>
+        <ul class="competence-list">
             <li><i class="fab fa-angular"></i> Angular</li>
             <li><i class="fas fa-leaf"></i> Spring Boot</li>
-            <li><i class="fas fa-code-branch"></i> Git</li>
-            <li><i class="fas fa-database"></i> MySQL</li>
-          </ul>
+        </ul>
 
-        <h3>Environnements de travail</h3>
-          <ul class="competence-list">
+        <!-- CMS -->
+        <h3>CMS</h3>
+        <ul class="competence-list">
+            <li><i class="fab fa-wordpress"></i> WordPress</li>
+        </ul>
+
+        <!-- Création & Montage -->
+        <h3>Création & Montage</h3>
+        <ul class="competence-list">
+            <li><i class="fas fa-video"></i> Adobe After Effects</li>
+        </ul>
+
+        <!-- Développement de jeux -->
+        <h3>Développement de jeux</h3>
+        <ul class="competence-list">
+            <li><i class="fas fa-cube"></i> Unity</li>
+        </ul>
+
+        <!-- Environnements & outils de travail -->
+        <h3>Environnements & outils de travail</h3>
+        <ul class="competence-list">
             <li><i class="fab fa-microsoft"></i> Microsoft Office</li>
             <li><i class="fas fa-terminal"></i> Visual Studio Code</li>
             <li><i class="fas fa-code"></i> IntelliJ IDEA</li>
-          </ul>
+        </ul>
+
       </section>
     </div>
-  </main>
+</main>
 </div>
 
 <footer>
